Adiciona recursos de css

--- a/index.html
+++ b/index.html
@@ -5,33 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Blackhole.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Alexandre Rocha</h1>
-
-    <img id="foto1" src="WhatsApp Image 2022-07-25 at 17.00.28.jpeg" alt="Alexandre" width="40%">
-
-    <p>Através da experiência que adquiri nos últimos dez anos trabalhando na engenharia, do setor comercial ao chão de fábrica, percebi como a tecnologia pode mudar a vida das pessoas.</p>
-    <p>Constante aprendiz, fascinado em contribuir para o desenvolvimento de pessoas e compartilhar conhecimentos, estou em transição de carreira e escolhi a Trybe para me auxiliar nesse desafio de me tornar <strong>Desenvolvedor FullStack</strong>.</p>
-    <hr>
-
-    <h2>Lista de Habilidades</h2>
-    <ul>
-        <li><strong>JavaScript</strong></li>
-        <li>HTML</li>
-        <li>CSS</li>
-    </ul>
-
-    <hr>
-
-    <a href="#foto1">Este é um link para minha foto</a>
-
-    <hr>
-
-    <a href="https://www.hltv.org/">Este é um link para um blog que gosto de acompanhar: <b>hltv.org </b></a>
-
-
-    
-    
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </nav>
+    <header>
+        <h1>
+            Alexandre Rocha
+        </h1>
+        <div>
+            <img id="foto1" src="1.png" alt="Alexandre">
+            <h2>Web Development Student at <span class="trybe">Trybe!</span></h2>
+    </header>
+    <main>
+        <article>
+            <h1>About Me!</h1>
+            <p>Through the experience I acquired in the last ten years working in engineering, from the commercial sector to the factory floor, I realized how technology can change people lives.</p>
+            <p>Constant learner, fascinated in contributing to the development of people and sharing knowledge, I am in career transition and I chose Trybe to help me in this challenge of becoming a <strong>FullStack Developer</strong>.</p>
+            <h1>Sobre</h1>
+            <p>Através da experiência que adquiri nos últimos dez anos trabalhando na engenharia, do setor comercial ao chão de fábrica, percebi como a tecnologia pode mudar a vida das pessoas.</p>
+            <p>Constante aprendiz, fascinado em contribuir para o desenvolvimento de pessoas e compartilhar conhecimentos, estou em transição de carreira e escolhi a Trybe para me auxiliar nesse desafio de me tornar <strong>Desenvolvedor FullStack</strong>.</p>
+        </article>
+    </main>
+    <aside>
+        <h2>Skills</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+    </aside>      
+    <footer>
+        <p>Site criado por <a href="https://www.linkedin.com/in/alexandre-rocha-215895231/" target="_blank" class="externo">Alexandre Rocha</a> para o treinamento de HTML e CSS.</p>
+    </footer>
 </body>
 </html>
